--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -199,7 +199,7 @@
 	
 	<div id="gldiv" style="width: 100%; height: 100%;"></div>
 	
-	<div id='compoundTitle' class='text' style="position:aboslute; left:0; top:0;"></div>
+	<div id='compoundTitle' class='text' style="position:absolute; left:0; top:0;"></div>
 	
 	<div id="webixID" class='text' style="position:absolute; left:0; bottom:0;"></div>
 	
