--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -26,7 +26,8 @@
 	
 	var glviewer = null;
 	var labels = [];
-	var surfaceObjs = []; //0 index will be for main comp; 1 will be for any ligand
+	var surfaceObjs = [];
+		//0 index will be for target protein; 1 will be for any ligand
 	
 	//Display settings variables. Follow same indexing scheme as surfaceObjs[]
 	var structType = [];
