Pre-v1.0.0 reference update
Changed html script src references from "codebase" to "lib".
Updated README.txt to include article publication.

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -4,8 +4,8 @@
 	<meta charset='utf-8'>
 	<title>$3Dmol Example</title>
 	
-	<script src="codebase/jquery-2.1.4.min.js"></script>
-	<script src="codebase/3Dmol.js"></script>
+	<script src="lib/jquery-2.1.4.min.js"></script>
+	<script src="lib/3Dmol.js"></script>
 
 <style>
 	body {
