--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-       <link rel="stylesheet" href="codebase/webix.css" type="text/css" media="screen" charset="utf-8">
+       <link rel="stylesheet" href="lib/webix.css" type="text/css" media="screen" charset="utf-8">
 
-       <script src="codebase/webix.js" type="text/javascript" charset="utf-8"></script>
-       <script src="codebase/jquery-2.1.4.min.js"></script>
+       <script src="lib/webix.js" type="text/javascript" charset="utf-8"></script>
+       <script src="lib/jquery-2.1.4.min.js"></script>
 		 
-       <script src="codebase/gridupdater.js"></script>
+       <script src="lib/gridupdater.js"></script>
        
        	<!-- You can get these files from https://github.com/webix-hub/components -->
 	   <script type="text/javascript">
